--- a/client/src/components/home/Cards.module.css
+++ b/client/src/components/home/Cards.module.css
@@ -15,3 +15,22 @@
     padding: 5%; 
     padding-top: 150px;
 }
+
+.gif{
+    width: 800px;
+    height: 500px;
+    display: flex;
+    margin-left: 33%;
+    margin-top: 15%;
+}
+
+.gif img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    width: 50%;
+    height: 50%;
+    border-radius: 15px;
+}
