--- a/client/src/components/detail/DetailRecipe.module.css
+++ b/client/src/components/detail/DetailRecipe.module.css
@@ -49,7 +49,7 @@ a {
     background-color: #c9a693;
     color: black;
     font-weight: bold;
-    border: solid 0.5px #34372c;
+    border: solid 0.5px #c5815db6;
 }
 
 .name{
