--- a/client/src/components/home/Cards.module.css
+++ b/client/src/components/home/Cards.module.css
@@ -13,7 +13,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 5%; 
-    padding-top: 150px;
+    padding-top: 130px;
+    position: relative;
+    /* margin-right: -90px; */
 }
 
 .gif{
