--- a/client/src/components/home/RecipeCard.module.css
+++ b/client/src/components/home/RecipeCard.module.css
@@ -7,11 +7,12 @@
     background: rgba(236, 236, 236, 0.49);
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     text-decoration: none;
-    height: 450px;
+    height: 470px;
     width: 350px;
     padding: 15px 10px 0px 10px;
     margin-bottom: 30px;
     border-radius: 10px;
+    margin-left: 20px;
 }
 
 .image {
@@ -19,6 +20,7 @@
     height: 200px;
     border-radius: 10px;
     border:rgba(145, 28, 28, 0.59) solid 2px ;
+    margin-top: 0px;
 }
 
 
@@ -45,4 +47,29 @@
 
 .title{
     font-family: 'Radio Canada', sans-serif;
+    margin-top: 10px;
+}
+
+.puntuation{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: -16px;
+}
+
+
+.titlePoints{
+    display: flex;
+    justify-content: center;
+    font-family: 'Radio Canada', sans-serif;
+}
+
+.score{
+    font-family: 'Radio Canada', sans-serif;
+    margin-top: 22px;
+    margin-left: 0px;
+}
+
+.divDiet{
+    margin-top: -10px;
 }
